<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InfiniteStream Player</string>
    <string name="retry_fetch">Retry Fetch</string>
    <string name="restart_playback">Restart Playback</string>
    <string name="reload_page">Reload Page</string>
    <string name="content_control">Content Control</string>
    <string name="server">Server</string>
    <string name="protocol">Protocol</string>
    <string name="segment">Segment</string>
    <string name="codec">Codec</string>
    <string name="content">Content</string>
    <string name="select_content">Select content</string>
    <string name="ready">Ready</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="exit_fullscreen">Exit Fullscreen</string>
    <string name="discover_servers">+ Add server</string>
    <string name="discovering">Looking for servers…</string>
    <string name="no_servers_found">No servers detected on your network. Make sure the server is running and INFINITE_STREAM_ANNOUNCE_URL is set.</string>
</resources>
